--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,8 @@ rustyline = "9.0.0"
 clap = "3.1.2"
 termcolor = "1.1.2"
 fnv = "1.0.7"
-smallvec = "1.8.0"
-
+smallvec = { version = "1.8.0", features = ["const_new"] }
+ 
 [dev-dependencies]
 regex = "1.5.4"
 lazy_static = "1.4.0"
