--- a/kaon/Cargo.toml
+++ b/kaon/Cargo.toml
@@ -11,6 +11,8 @@ termcolor = "1.1.2"
 fnv = "1.0.7"
 smallvec = { version = "1.8.0", features = ["const_new"] }
 
+kaon_macros = { path = "../kaon-macros" }
+
 [dev-dependencies]
 regex = "1.5.4"
 lazy_static = "1.4.0"
